# lala.ai

./: .gitignore  Cargo.toml  LICENSE  LLML.Dockerfile  README.md  ai-config.yaml  docker-compose.yaml  init.sql  testnews.py
.github/: copilot-instructions.md
LLML/: Cargo.toml  config.py  main.py  requirements.txt
LLML-py/api/: routes.py
LLML-py/model/: __init__.py
LLML/api/: classifier.py  routes.py
LLML/model/: registry.py  runner.py
LLML/src/: main.rs
LLML/src/api/: mod.rs
LLML/src/loalYaml/: loadYaml.rs
LLML/src/model/: mod.rs  model.rs  registry.rs
doc/: LLML-py.md  LLML.md  architecture.md  design.md  lala.md  phase0-rag.md  phase0.md  queries.md  retrival.md
doc/planning/: phase0-rag.md  phase0.md  tool-registry.md
lala/: Cargo.toml  build.rs
lala/src/: cli.rs  config.rs  main.rs
lala/src/agent/: memory.rs  mod.rs  model.rs  planner.rs
lala/src/chat/: ffi.rs  llama.rs  mod.rs  model.rs
lala/src/cli/: chat.rs  commands.rs  display.rs  ingest.rs  mod.rs
lala/src/db/: connection.rs
lala/src/tools/: mod.rs  rag.rs
pipeline/src/entities/: answers.rs  chunk.rs  documents.rs  messages.rs  mod.rs  session.rs
rag/: Cargo.toml
rag/src/: chunker.rs  lib.rs  news.rs  store.rs  types.rs
telegram/: app.py  config.py  logging_config.py  requirements.txt
telegram/agent/: client.py  conversation.py
telegram/bot/: handlers.py  middleware.py
tools/: Cargo.toml
tools/src/: lib.rs  registry.rs
tools/src/builtin/: file.rs  mod.rs  time.rs
