[package]
name = "lala"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rustyline = "14.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
figlet-rs = "0.1.5"
colored = "3.1.1"

rag = { path = "../rag" }

[build-dependencies]
